fix: caption contrast

--- a/src/assets/styles/base/typography.scss
+++ b/src/assets/styles/base/typography.scss
@@ -20,7 +20,8 @@
 
 .caption {
   @include font-size(6);
-  color: color('grey');
+  color: color('night', 'lighter');
+  font-weight: $font-weight-regular;
 
   &:not(:first-child) {
     margin-top: -1rem;
